[project]
name = "recllm_api"
version = "0.2.2"
description = "RecLLM API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "recllm-core",
    "requests>=2.32.3",
]

[tool.uv.sources]
recllm-core = { git = "ssh://git@github.com/recllm-org/core.git" }
